<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Prime</string>
    <string name="title_server">Servers</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_not_connected">Not Connected</string>
    <string name="connection_test_testing">Testing...</string>
    <string name="connection_test_available">Available: %dms</string>
    <string name="connection_test_error">Error: %s</string>
    <string name="toast_services_start">Starting service...</string>
    <string name="toast_services_stop">Stopping service...</string>
    <string name="toast_services_success">Service started successfully</string>
    <string name="toast_services_failure">Service failed to start</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failed</string>
    <string name="title_import_config_count">Imported %d configurations</string>
    <string name="title_export_config_count">Exported %d configurations</string>
    <string name="title_del_config_count">Deleted %d configurations</string>
    <string name="title_del_duplicate_config_count">Deleted %d duplicate configurations</string>
    <string name="title_update_config_count">Updated %d configurations</string>
    <string name="del_config_comfirm">Are you sure you want to delete all configurations?</string>
    <string name="del_invalid_config_comfirm">Are you sure you want to delete invalid configurations?</string>
    <string name="title_file_chooser">Choose File</string>
    <string name="filter_config_all">All Configurations</string>
    <string name="migration_success">Migration completed successfully</string>
    <string name="migration_fail">Migration failed</string>
    <string name="pre_resolving_domain">Pre-resolving domain names...</string>
    <string name="connection_test_testing_count">Testing %d servers...</string>
    <string name="app_tile_first_use">Please select a server first</string>
    <string name="toast_warning_pref_proxysharing_short">Proxy sharing enabled</string>
    <string name="search">Search</string>
    <string name="import_qrcode">Import QR Code</string>
    <string name="import_clipboard">Import from Clipboard</string>
    <string name="import_local">Import from File</string>
    <string name="import_manually_vmess">Import VMess Manually</string>
    <string name="import_manually_vless">Import VLESS Manually</string>
    <string name="import_manually_ss">Import Shadowsocks Manually</string>
    <string name="import_manually_socks">Import SOCKS Manually</string>
    <string name="import_manually_http">Import HTTP Manually</string>
    <string name="import_manually_trojan">Import Trojan Manually</string>
    <string name="import_manually_wireguard">Import WireGuard Manually</string>
    <string name="import_manually_hysteria2">Import Hysteria2 Manually</string>
    <string name="export_all">Export All</string>
    <string name="ping_all">Ping All</string>
    <string name="real_ping_all">Real Ping All</string>
    <string name="intelligent_selection_all">Intelligent Selection All</string>
    <string name="service_restart">Restart Service</string>
    <string name="del_all_config">Delete All Configs</string>
    <string name="del_duplicate_config">Delete Duplicate Configs</string>
    <string name="del_invalid_config">Delete Invalid Configs</string>
    <string name="sort_by_test_results">Sort by Test Results</string>
    <string name="sub_update">Update Subscriptions</string>
    <string name="sub_setting">Subscription Settings</string>
    <string name="per_app_proxy_settings">Per-App Proxy Settings</string>
    <string name="routing_setting">Routing Settings</string>
    <string name="user_asset_setting">User Asset Settings</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="promotion">Promotion</string>
    <string name="logcat">Logcat</string>
    <string name="check_for_update">Check for Update</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
