<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_view"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/import_qrcode"
        android:icon="@drawable/ic_qu_scan_24dp"
        android:title="@string/import_qrcode"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_clipboard"
        android:icon="@drawable/ic_copy"
        android:title="@string/import_clipboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_local"
        android:icon="@drawable/ic_file_24dp"
        android:title="@string/import_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_vmess"
        android:title="@string/import_manually_vmess"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_vless"
        android:title="@string/import_manually_vless"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_ss"
        android:title="@string/import_manually_ss"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_socks"
        android:title="@string/import_manually_socks"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_http"
        android:title="@string/import_manually_http"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_trojan"
        android:title="@string/import_manually_trojan"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_wireguard"
        android:title="@string/import_manually_wireguard"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_manually_hysteria2"
        android:title="@string/import_manually_hysteria2"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_all"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/export_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/ping_all"
        android:icon="@drawable/ic_play_24dp"
        android:title="@string/ping_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/real_ping_all"
        android:icon="@drawable/ic_play_24dp"
        android:title="@string/real_ping_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/intelligent_selection_all"
        android:icon="@drawable/ic_qu_switch_24dp"
        android:title="@string/intelligent_selection_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/service_restart"
        android:icon="@drawable/ic_restore_24dp"
        android:title="@string/service_restart"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_all_config"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/del_all_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_duplicate_config"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/del_duplicate_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_invalid_config"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/del_invalid_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_test_results"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/sort_by_test_results"
        app:showAsAction="never" />

    <item
        android:id="@+id/sub_update"
        android:icon="@drawable/ic_cloud_download_24dp"
        android:title="@string/sub_update"
        app:showAsAction="never" />

</menu>
